objects/Message__e.object
<CustomObject>
    <description>Platform event for the messages being sent in the Messenger application</description>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_User__c</fullName>
        <label>From User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Id__c</fullName>
        <description>The ID of the message that represents this message in the database. Required in case a user attempts to post this message in Chatter before refreshing the page. (Refreshing the page would provide the ID as all messages are pulled from the DB)</description>
        <label>Message Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_User__c</fullName>
        <description>The recipient or public group that this message is being sent to</description>
        <label>To User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Message</label>
    <pluralLabel>Messages</pluralLabel>
</CustomObject>